--- a/views/partials/stats.handlebars
+++ b/views/partials/stats.handlebars
@@ -7,11 +7,11 @@
 	<div class="panel-body">
 		<div class="row">
 			<div class="col-md-2 text-left">Total:</div>
-			<div class="col-md-10 text-right">0 {{stats.total}}</div>
+			<div class="col-md-10 text-right">{{sidebar.stats.total}}</div>
 		</div>
 		<div class="row">
 			<div class="col-md-2 text-left">Online:</div>
-			<div class="col-md-10 text-right">0 {{stats.online}}</div>
+			<div class="col-md-10 text-right">{{sidebar.stats.online}}</div>
 		</div>
 	</div>
 </div>
