--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,6 +19,39 @@
 						name="des" rows="2"></textarea>
 				</div>
 			</div>
+			
+			<div class="form-group col-md-12">
+				<label class="col-md-2 control-label"
+			 		for="typeofsensor">Sensor:</label>
+				<div class="col-md-10">
+					 <select name="sensors" class="form-control">
+                                                <option>Type of Sensor</option>
+                                                <option value="Temp">Temperature</option>
+                                                <option value="Humid">Humidity</option>
+                                                <option value="Soil">Soil</option>
+                                        </select>
+
+				</div>
+			</div>
+			
+			<div class="form-group col-md-12">
+                               
+                            
+					<label class="col-md-2"
+                                        for="geolocation_la">Latitude:</label>
+                                	<div class="col-md-3">
+                                        <input class="form-control"
+                                                name="latt" type="text"></input>
+                                	</div>
+					<label class="col-md-2" for="geolocation_lo">Longitude:</label>
+                                        <div class="col-md-3">
+                                        <input class="form-control"
+                                                name="longi" type="text"></input>
+                                        </div>
+                        </div>
+
+
+
 			<div class="form-group col-md-12">
 				<div class="col-md-12 text-right">
 					<button type="submit" id="login-btn"
@@ -35,11 +68,12 @@
                 <h3 class=panel-title">Devices List
                 </h3>
         </div>
+
         <div class="panel-body">
                 {{#each Devices}}
                         <div class="col-md-4 text-center" style="padding-bottom:lem;">
-                                <a href="devices/{{id}}">
-                                        <img src="/public/upload/{{name}}" alt="{{name}}" style="background: #ABC; width: 175px; height: 175px;"
+				<a href="devices/{{id}}">
+                                        <img src="/public/upload/{{name}}" alt="{{name}}" id="{{type}}" style="color: #000; width: 175px; height: 175px;"
                                                 class="img-thumbnail">
                                 </a>
                         </div>
